--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   go_router: ^6.5.5
   device_info_plus: ^8.2.0
   package_info_plus: ^3.1.0
+  sqflite: ^2.2.6
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
